Bug 313992 - Information Panel shows <html>X items selected</html>
Summary: Information Panel shows <html>X items selected</html>
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (show other bugs)
Version: 2.1.97
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: reproducible
Depends on:
Blocks:
 
Reported: 2013-01-27 19:03 UTC by bodertz
Modified: 2013-01-27 19:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bodertz 2013-01-27 19:03:31 UTC
When multiple files are selected in Dolphin, the Information Panel surrounds the number of items selected with <html> and </html>.

Reproducible: Always

Steps to Reproduce:
1. Select multiple items in dolphin with the information panel visible.
Actual Results:  
Information Panel displays: ie. <html>40 items selected</html>

Expected Results:  
Information Panel should display: ie. 40 items selected
Comment 1 Frank Reininghaus 2013-01-27 19:05:11 UTC
Thanks for the bug report! A fix has already been found and will be applied soon:

https://git.reviewboard.kde.org/r/108584/
Comment 2 Weng Xuetian 2013-01-27 19:11:48 UTC
Git commit 8a97ca66adf46a61cabdb21fdbdd7fe18fa0755f by Weng Xuetian.
Committed on 25/01/2013 at 22:07.
Pushed by xuetianweng into branch 'KDE/4.10'.

escape the existing text instead of set to plain text

@info indicates it's rich text and will be added <html> tag by kdelibs,
so just escape the text that will be set to label for KDE/4.10

REVIEW: 108584

M  +2    -3    dolphin/src/panels/information/informationpanelcontent.cpp

http://commits.kde.org/kde-baseapps/8a97ca66adf46a61cabdb21fdbdd7fe18fa0755f